# kidneypy

./: .gitignore  README.md  pyproject.toml  venv_setup.sh
.github/workflows/: ci.yml
examples/: profile.ipynb  profile_features.ipynb  univariate.ipynb
notebooks/: sandbox.ipynb
src/kidneypy/eda/: __init__.py  pairwise.py  plot_feature.py  profile.py  profile_features.py  profiling.py  univariate.py  utils.py
src/kidneypy/ml/: __init__.py  preprocessing.py  selection.py
tests/: test_eda.py
