[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kidneypy"
version = "0.0.5"
description = "Example Python package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.6"
]
authors = [
  {name="Darren Kidney"}
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
dev = [
    "ruff",
    "mypy"
]

